--- a/css/front.css
+++ b/css/front.css
@@ -232,7 +232,7 @@ p{
 
 /* Hero section styling */
 #hero{
-    background-image: url('/images/hero-bg.png');
+    background-image: url('images/hero-bg.png');
     background-position: top center;
     background-size: cover;
     position:relative;
@@ -341,7 +341,7 @@ p{
     flex-direction: column;
     padding:10px;
     border-radius:20px;
-    background-image: url('/images/img-1.png');
+    background-image: url('images/img-1.png');
     background-position: center;
     background-size: cover;
     margin: 10px 5%;
