--- a/css/front.css
+++ b/css/front.css
@@ -341,7 +341,7 @@ p{
     flex-direction: column;
     padding:10px;
     border-radius:20px;
-    background-image: url('./images/img-1.png');
+    background-image: url('../images/img-1.png');
     background-position: center;
     background-size: cover;
     margin: 10px 5%;
